RESOLVED FIXED161903
[css-grid] Fix intrinsic size computation with flexible sized tracks
https://bugs.webkit.org/show_bug.cgi?id=161903
Summary [css-grid] Fix intrinsic size computation with flexible sized tracks
Sergio Villar Senin
Reported 2016-09-13 04:07:48 PDT
[css-grid] Fix intrinsic size computation with flexible sized tracks
Attachments
Patch (5.93 KB, patch)
2016-09-13 04:13 PDT, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2016-09-13 04:13:19 PDT
Javier Fernandez
Comment 2 2016-09-13 04:37:47 PDT
Comment on attachment 288685 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=288685&action=review The patch looks good. > Source/WebCore/ChangeLog:10 > + stated in the early versions of the spec that size is the sum of the tracks' base sizes typo -> s/tracks'/track's
WebKit Commit Bot
Comment 3 2016-09-15 01:44:18 PDT
Comment on attachment 288685 [details] Patch Clearing flags on attachment: 288685 Committed r205960: <http://trac.webkit.org/changeset/205960>
WebKit Commit Bot
Comment 4 2016-09-15 01:44:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.